--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "lucide-react": "^0.344.0",
-    "@google/genai": "^0.1.1"
+    "@google/genai": "*",
+    "three": "^0.160.0",
+    "@react-three/fiber": "^8.15.16",
+    "@react-three/drei": "^9.99.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
@@ -19,6 +22,7 @@
     "typescript": "^5.2.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "@types/node": "^20.11.24"
+    "@types/node": "^20.11.24",
+    "@types/three": "^0.160.0"
   }
 }
